test/compile-fail/find-file/duplicate-module-files-parse-fail/expected.txt
error: conflicting files for module `a` were found at ./test/compile-fail/find-file/duplicate-module-files-parse-fail/a.rhdl and ./test/compile-fail/find-file/duplicate-module-files-parse-fail/a/mod.rhdl
  ┌─ ./test/compile-fail/find-file/duplicate-module-files-parse-fail/top.rhdl:1:1
  │
1 │ mod a;
  │ ^^^^^^ declared here

error: could not parse ./test/compile-fail/find-file/duplicate-module-files-parse-fail/a.rhdl: unexpected token
  ┌─ ./test/compile-fail/find-file/duplicate-module-files-parse-fail/a.rhdl:1:1
  │
1 │ ksldjflk
  │ ^^^^^^^^ expected any of ["TokArch", "TokConst", "TokEntity", "TokEnum", "TokFn", "TokImpl", "TokMod", "TokPub", "TokStruct", "TokTokenType", "TokTrait", "TokUse"]
  │
  ┌─ ./test/compile-fail/find-file/duplicate-module-files-parse-fail/top.rhdl:1:1
  │
1 │ mod a;
  │ ------ declared here

error: could not parse ./test/compile-fail/find-file/duplicate-module-files-parse-fail/a/mod.rhdl: unexpected token
  ┌─ ./test/compile-fail/find-file/duplicate-module-files-parse-fail/a/mod.rhdl:1:1
  │
1 │ a
  │ ^ expected any of ["TokArch", "TokConst", "TokEntity", "TokEnum", "TokFn", "TokImpl", "TokMod", "TokPub", "TokStruct", "TokTokenType", "TokTrait", "TokUse"]
  │
  ┌─ ./test/compile-fail/find-file/duplicate-module-files-parse-fail/top.rhdl:1:1
  │
1 │ mod a;
  │ ------ declared here

